# ttihp-spi-ws2812

./: .gitignore  SETUP.md  blinky.py  info.yaml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docs.yaml  fpga.yaml  gds.yaml  generate.yaml  test.yaml
docs/: info.md
src/: amaranth_core.v  design.py  main.v  project.py  project.v  shared.py  spi.py  top.py  top.v  ws2811.py
test/: Makefile  README.md  requirements.txt  run_tests.sh  tb.v  test.py
